--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', sans-serif;
   font-size: 18px;
   line-height: 21px;
   background-color: #F2F2F2;
@@ -31,7 +31,7 @@ body {
   color: black;
   width: 68px;
   height: 24px;
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   text-align: center;
   font-size: 20px;
@@ -46,7 +46,7 @@ body {
   background-color: #756157;
   border-radius: 4px;
   color: #FFFFFF;
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -55,7 +55,7 @@ body {
 }
 
 .hero{
-  background:  url('../images/hero-line.svg') bottom, url('../images/main-background.jpg');
+  background:  url('../images/hero-line.svg') bottom, url('../images/main_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
@@ -67,22 +67,22 @@ body {
   left: 371px;
 }
 
-.hero-subscription {
+.hero-description {
   background-color: #FFFFFF;
 }
 
 .hero-title {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
   text-transform: uppercase;
-  color: black;
+  color: #000000;
 }
 
 .hero-subtitle {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
@@ -90,25 +90,155 @@ body {
   color: #333333;
 }
 
-.advantages-list {
-  text-align: center;
+.advantages-item:nth-child(1) {
+  background-color: #82b3d3;
+}
+
+.advantages-item:nth-child(2) {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages-item:nth-child(3) {
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-item:nth-child(4) {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages-item:nth-child(5) {
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .advantages-title {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', sans-serif;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+  text-align: center;
+}
+
+.advantages-description {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  text-align: center;
+  color: #333333;
 }
 
 .features {
   text-align: center;
 }
+h2.features-title {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+}
 
-.features-item-1 {
+.features-subtitle {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  color: #333333;
+}
+
+li.features-title {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.features-description {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  color: #333333;
+}
+
+.features-item:nth-child(1) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.features-item-3{
+.features-item:nth-child(3){
   background-color: rgba(131, 179, 211, 0.12);
+}
+
+.search-title {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.search-subtitle {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #333333;
+}
+
+a.search {
+  background-color: #756157;
+  border-radius: 4px;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.subscribe {
+  background-image: url('../images/subscribe_background.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  height: 414px;
+}
+
+.subscribe-title {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.subscribe-description {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.button {
+  background-color: #82b3d3;
+  border-radius: 0 4px 4px 0;
+  color: #FFFFFF;
+}
+
+.link-phone {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
 }
