--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,17 +30,15 @@ body {
 .navigation-link {
   color: black;
   width: 68px;
-  height: 24px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   text-align: center;
   font-size: 20px;
   line-height: 24px;
   text-decoration: none;
-  text-transform: capitalize;
 }
 
-.navigation-button {
+.navigation-box {
   width: 161px;
   height: 36px;
   background-color: #756157;
@@ -55,7 +53,14 @@ body {
 }
 
 .hero{
-  background:  url('../images/hero-line.svg') bottom, url('../images/main_background.jpg');
+  background: url('../images/main_background.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.hero-line {
+  background: url('../images/hero-line.svg');
+  background-color: #FFFFFF;
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
@@ -63,8 +68,6 @@ body {
 .welcome {
   width: 458px;
   height: 352px;
-  top: 51px;
-  left: 371px;
 }
 
 .hero-description {
@@ -160,13 +163,10 @@ li.features-title {
   color: #333333;
 }
 
-.features-item:nth-child(1) {
+.features-item:nth-child(odd) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.features-item:nth-child(3){
-  background-color: rgba(131, 179, 211, 0.12);
-}
 
 .search-title {
   font-family: 'PT Sans', sans-serif;
@@ -201,10 +201,11 @@ a.search {
 }
 
 .subscribe {
+  width: 1200px;
+  height: 414px;
   background-image: url('../images/subscribe_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
-  height: 414px;
 }
 
 .subscribe-title{
@@ -378,33 +379,15 @@ a.search {
   background-color: #FFFFFF;
 }
 
-.subscribe-catalog{
-  width: 1200px;
-  height: 414px;
+.subscribe.subscribe-catalog{
   background-color: #FFFFFF;
+  background-image: none;
 }
 
-.subscribe-title-catalog {
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-align: center;
-  text-transform: uppercase;
+.subscribe-title.catalog-title {
   color: #000000;
 }
 
-.subscribe-description-catalog {
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 26px;
-  text-align: center;
+.subscribe-description.catalog-description {
   color: #000000;
-}
-
-.button-catalog {
-  background-color: #82b3d3;
-  border-radius: 0 4px 4px 0;
-  color: #FFFFFF;
 }
