--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,14 @@
   font-style: normal;
 }
 
+.html {
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
   line-height: 21px;
@@ -25,6 +32,22 @@ body {
   color: #FFFFFF;
   background-color: #FFFFFF;
   padding: 0 70px;
+}
+
+.navigation {
+  display: flex;
+  margin: 0 auto;
+}
+
+.navigation-list {
+  width: 339px;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-user {
+  width: 268px;
+  margin-left: auto;
 }
 
 .navigation-link {
@@ -52,6 +75,11 @@ body {
   text-transform: uppercase;
 }
 
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .hero{
   background: url('../images/main_background.jpg');
   background-size: 100% auto;
@@ -66,6 +94,8 @@ body {
 }
 
 .welcome {
+  display: block;
+  margin: 0 auto;
   width: 458px;
   height: 352px;
 }
@@ -91,6 +121,14 @@ body {
   line-height: 26px;
   text-align: center;
   color: #333333;
+}
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 
 .advantages-item:nth-child(1) {
@@ -131,6 +169,25 @@ body {
 .features {
   text-align: center;
 }
+
+.features-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.features-item {
+  width: 400px;
+  height: 385px;
+}
+
+.features-item:nth-child(1) {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.features-item:nth-child(3) {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
 h2.features-title {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
@@ -162,11 +219,6 @@ li.features-title {
   font-weight: 400;
   color: #333333;
 }
-
-.features-item:nth-child(odd) {
-  background-color: rgba(131, 179, 211, 0.12);
-}
-
 
 .search-title {
   font-family: 'PT Sans', sans-serif;
@@ -231,6 +283,13 @@ a.search {
   background-color: #82b3d3;
   border-radius: 0 4px 4px 0;
   color: #FFFFFF;
+}
+
+.main-footer-container {
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .link-phone {
