--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,9 +23,29 @@ body {
   flex-direction: column;
   margin: 0;
   font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  min-height: 100%;
   background-color: #F2F2F2;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.logo {
+  width: 140px;
+  height: 70px;
 }
 
 .main-header {
@@ -37,15 +57,23 @@ body {
 .navigation {
   display: flex;
   margin: 0 auto;
+  width: 1060px;
 }
 
 .navigation-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 339px;
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 .navigation-user {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   width: 268px;
   margin-left: auto;
 }
@@ -61,17 +89,44 @@ body {
   text-decoration: none;
 }
 
+.navigation-search {
+  background: url('../images/search.svg');
+  display: inline-block;
+  width: 44px;
+  height: 64px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.navigation-favourite {
+  background: url('../images/like.svg');
+  display: inline-block;
+  width: 44px;
+  height: 64px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.favourite-counter {
+  position: absolute;
+  top: 13px;
+  right: 2px;
+  background-color: #7DB54F;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  color: #FFFFFF;
+  font-size: 10px;
+  text-align: center;
+}
+
 .navigation-box {
-  width: 161px;
-  height: 36px;
   background-color: #756157;
   border-radius: 4px;
   color: #FFFFFF;
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 700;
   font-size: 16px;
   line-height: 20px;
-  text-align: center;
   text-transform: uppercase;
 }
 
@@ -84,24 +139,39 @@ body {
   background: url('../images/main_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
+  position: relative;
+  min-height: 420px;
 }
 
-.hero-line {
+.hero::after {
+  content: '';
   background: url('../images/hero-line.svg');
-  background-color: #FFFFFF;
   background-size: 100% auto;
   background-repeat: no-repeat;
+  width: 1200px;
+  height: 57px;
+  display: block;
+  position: absolute;
+  bottom: 0;
 }
 
 .welcome {
   display: block;
+  position: absolute;
   margin: 0 auto;
   width: 458px;
   height: 352px;
+  left: 31%;
+  right: 31%;
+  top: 7%;
+  bottom: 48%;
 }
 
 .hero-description {
   background-color: #FFFFFF;
+  margin-top: -25px;
+  padding-top: 25px;
+  min-height: 200px;
 }
 
 .hero-title {
@@ -125,30 +195,36 @@ body {
 
 .advantages-list {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
 }
 
+.advantages-item {
+  width: 1200px;
+  min-height: 385px;
+}
+
 .advantages-item:nth-child(1) {
-  background-color: #82b3d3;
+  background-color: #82B3D3;
 }
 
 .advantages-item:nth-child(2) {
-  background-color: rgba(131, 179, 211, 0.12);
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .advantages-item:nth-child(3) {
-  background-color: rgba(131, 179, 211, 0.2);
-}
-
-.advantages-item:nth-child(4) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.advantages-item:nth-child(5) {
+.advantages-item:nth-child(4) {
   background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-item:nth-child(5) {
+  background-color: #82B3D3;
 }
 
 .advantages-title {
@@ -177,18 +253,45 @@ body {
 
 .features-item {
   width: 400px;
-  height: 385px;
+  min-height: 385px;
 }
 
 .features-item:nth-child(1) {
+  background: url('../images/residential.svg');
+  background-position-x: center;
+  background-position-y: top;
+  background-size: 75px 72px;
+  background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.features-item:nth-child(2) {
+  background: url('../images/food.svg');
+  background-position-x: center;
+  background-position-y: top;
+  background-size: 75px 72px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .features-item:nth-child(3) {
+  background: url('../images/souvenirs.svg');
+  background-position-x: center;
+  background-position-y: top;
+  background-size: 75px 72px;
+  background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-h2.features-title {
+.features .features-title {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -205,7 +308,7 @@ h2.features-title {
   color: #333333;
 }
 
-li.features-title {
+h3.features-title {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 24px;
@@ -254,7 +357,7 @@ a.search {
 
 .subscribe {
   width: 1200px;
-  height: 414px;
+  min-height: 414px;
   background-image: url('../images/subscribe_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
