--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,13 +14,18 @@
   font-style: normal;
 }
 
-.html {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
   height: 100%;
 }
 
 body {
   display: flex;
-  flex-direction: column;
   margin: 0;
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
@@ -28,6 +33,10 @@ body {
   line-height: 21px;
   min-height: 100%;
   background-color: #F2F2F2;
+}
+
+ul {
+  list-style-type: none;
 }
 
 .visually-hidden {
@@ -122,15 +131,24 @@ body {
 }
 
 .navigation-box {
+  padding: 8px 50px;
   background-color: #756157;
   border-radius: 4px;
   color: #FFFFFF;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   width: 1200px;
   margin: 0 auto;
 }
@@ -152,7 +170,7 @@ body {
   height: 57px;
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
 }
 
 .welcome {
@@ -195,36 +213,76 @@ body {
 
 .advantages-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
 }
 
-.advantages-item {
-  width: 1200px;
-  min-height: 385px;
+.advantages-wrapper:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #FFFFFF;
+  padding: 103px 85px;
 }
 
 .advantages-item:nth-child(1) {
   background-color: #82B3D3;
+  display: flex;
+  width: 1200px;
+  height: 385px;
+}
+
+.advantages-wrapper:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #FFFFFF;
+  padding: 103px 85px;
+}
+
+.advantages-image {
+  width: 800px;
+  height: 385px;
 }
 
 .advantages-item:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: rgba(131, 179, 211, 0.2);
+  width: 400px;
+  height: 385px;
+  padding: 103px 85px;
 }
 
 .advantages-item:nth-child(3) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  height: 385px;
+  padding: 103px 85px;
 }
 
 .advantages-item:nth-child(4) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: rgba(131, 179, 211, 0.2);
+  width: 400px;
+  height: 385px;
+  padding: 103px 85px;
 }
 
 .advantages-item:nth-child(5) {
   background-color: #82B3D3;
+  display: flex;
+  width: 1200px;
+  height: 385px;
 }
 
 .advantages-title {
@@ -239,11 +297,16 @@ body {
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   text-align: center;
-  color: #333333;
 }
 
 .features {
   text-align: center;
+}
+
+.features-wrapper {
+  width: 1200px;
+  height: 246px;
+  padding: 64px 0;
 }
 
 .features-list {
@@ -323,6 +386,13 @@ h3.features-title {
   color: #333333;
 }
 
+section.search {
+  text-align: center;
+  padding: 96px 304px;
+  width: 1200px;
+  height: 406px;
+}
+
 .search-title {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
@@ -343,6 +413,7 @@ h3.features-title {
 }
 
 a.search {
+  padding: 8px 50px;
   background-color: #756157;
   border-radius: 4px;
   font-family: 'PT Sans', sans-serif;
@@ -356,6 +427,8 @@ a.search {
 }
 
 .subscribe {
+  text-align: center;
+  padding: 96px 258px 104px;
   width: 1200px;
   min-height: 414px;
   background-image: url('../images/subscribe_background.jpg');
@@ -382,10 +455,33 @@ a.search {
   color: #FFFFFF;
 }
 
+.email {
+  width: 684px;
+  height: 52px;
+  padding: 0;
+}
+
+.email input {
+  width: 452px;
+  height: 52px;
+  padding: 12px 20px;
+  border-radius: 4px 0 0 4px;
+}
+
 .button-subscribe {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
   background-color: #82b3d3;
   border-radius: 0 4px 4px 0;
   color: #FFFFFF;
+  width: 232px;
+  height: 52px;
+  padding: 4px 50px 8px 50px;
+  margin-left: -6px;
 }
 
 .page-footer-container {
@@ -452,11 +548,6 @@ a.search {
   line-height: 24px;
   text-transform: capitalize;
   color: #FFFFFF;
-}
-
-.catalog {
-  display: flex;
-  flex-direction: column;
 }
 
 .catalog-sort {
