--- a/styles/styles.css
+++ b/styles/styles.css
@@ -390,7 +390,7 @@ section.search {
   gap: 10px;
   padding: 96px 304px;
   width: 1200px;
-  height: 406px;
+  min-height: 406px;
 }
 
 .search-title {
@@ -412,7 +412,7 @@ section.search {
   color: #333333;
 }
 
-a.search {
+.button-search {
   padding: 8px 50px;
   background-color: #756157;
   border-radius: 4px;
@@ -424,6 +424,7 @@ a.search {
   text-transform: uppercase;
   text-decoration: none;
   color: #FFFFFF;
+  border-style: none;
 }
 
 .subscribe {
@@ -484,6 +485,7 @@ a.search {
   text-decoration: none;
   color: #FFFFFF;
   border-style: none;
+  width: 212px;
 }
 
 .footer {
@@ -579,13 +581,19 @@ a.search {
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  width: 114px;
+  width: 100%;
   height: 21px;
+  gap: 10px;
 }
 
 .breadcrumbs-item {
   margin-left: auto;
   position: relative;
+  margin: 0;
+}
+
+.breadcrumbs-item:nth-child(1) {
+  padding-right: 7px;
 }
 
 .breadcrumbs-item:not(:last-child)::after{
@@ -595,7 +603,7 @@ a.search {
   width: 6px;
   height: 10px;
   top: 8px;
-  left: 17px;
+  right: -7px;
   background: url('../images/arrow_catalog.svg');
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -607,6 +615,7 @@ a.search {
   font-size: 16px;
   line-height: 21px;
   color: #FFFFFF;
+  margin: 10px;
 }
 
 fieldset {
@@ -661,7 +670,7 @@ fieldset {
   color: #FFFFFF;
   padding: 8px 50px;
   min-width: 191px;
-  height: 36px;
+  min-height: 36px;
   border-radius: 4px;
   border: none;
 }
@@ -807,7 +816,6 @@ fieldset {
   grid-template-rows: 212px 1fr;
   row-gap: 16px;
   column-gap: 20px;
-  align-items: center;
   padding: 20px;
   border: 1px solid #e6e6e6;
   border-radius: 4px;
@@ -900,6 +908,7 @@ fieldset {
   background-size: 23px 17px;
   height: 17px;
   margin: 0;
+  align-self: center;
 }
 
 .star-4 {
