--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1477,9 +1477,9 @@ fieldset {
   z-index: 2;
 }
 
-/* .modal-container-close {
+.modal-container-close {
   display: none;
-} */
+}
 
 .modal {
   position: relative;
