--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,6 +236,7 @@ ul {
 }
 
 .hero{
+  background-color: #81B3D34D;
   background: url('../images/main_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -587,6 +588,7 @@ section.search {
   padding: 72px 258px 104px;
   width: 1200px;
   min-height: 414px;
+  background-color: #81B3D34D;
   background-image: url('../images/subscribe_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -624,7 +626,7 @@ section.search {
 
 .email input {
   width: 452px;
-  height: 52px;
+  min-height: 52px;
   padding: 12px 19px;
   border-radius: 4px 0 0 4px;
   border-style: none;
@@ -785,6 +787,7 @@ section.search {
   padding: 35px 70px;
   width: 1200px;
   min-height: 412px;
+  background-color: #81B3D34D;
   background-image: url('../images/catalog_background.jpg');
   background-size: cover;
   background-position: center;
@@ -1119,9 +1122,11 @@ fieldset {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 
 .filter-range input {
+  -moz-appearance: textfield;
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -1129,6 +1134,25 @@ fieldset {
   width: 143px;
   height: 48px;
   padding-left: 17px;
+}
+
+.placeholder {
+  position: absolute;
+  top: 14px;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #000000;
+  opacity: 0.30000001192092896;
+}
+
+.min {
+  left: 109px;
+}
+
+.max {
+  right: 17px;
 }
 
 .cost-min {
@@ -1217,6 +1241,14 @@ fieldset {
   font-size: 18px;
   line-height: 21px;
   color: #000000;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-image: url('../images/select_arrow.svg');
+  background-repeat: no-repeat;
+  background-position: 258px 18px;
+  cursor: pointer;
+  outline: none;
 }
 
 .select-control:hover {
@@ -1245,6 +1277,7 @@ fieldset {
       flex-wrap: wrap;
   gap: 8px;
   margin-top: -19px;
+  min-width: 160px;
 }
 
 .button-card {
