--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,6 +302,7 @@ body {
 
 .advantages-image {
   max-width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -376,15 +377,11 @@ body {
   width: 60px;
 }
 
-.advantages-item:nth-child(2) .advantages-title:after {
+.advantages-blue .advantages-title:after {
   background-color: rgba(0, 0, 0, 0.30);
 }
 
-.advantages-item:nth-child(3) .advantages-title:after {
-  background-color: rgba(0, 0, 0, 0.30);
-}
-
-.advantages-item:nth-child(4) .advantages-title:after {
+.advantages-lightblue .advantages-title:after {
   background-color: rgba(0, 0, 0, 0.30);
 }
 
